--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<title>Documentação | PI Digital</title>
-		<meta name="description" content="Documentação do Projeto de Transformação Digital dos Serviços Prestados pelo INPI" />
+		<meta name="description" content="Carta de Serviços ao Usuário do INPI" />
 		<meta name="keywords" content="transformação digital, serviços, atendimento, comunicação, interoperabilidade, dados abertos, segurança da informação" />
 		<meta name="author" content="Ouvidoria do INPI" />
 		<link rel="shortcut icon" href="../favicon.ico">
@@ -51,34 +51,9 @@ myYumpu.create_player("#yumpuMagazineContainer", "", { lang:"en", embed_id:"Cs6L
 			</defs>
 		</svg>
 		<div class="container">
-			<!-- Top Navigation -->
-			<div class="codrops-top clearfix"></div>
-			<header class="codrops-header">
-
-				<h1>Plano PI Digital</h1>
-				<h2>Documentação</h2>
-				<h5>ÚLTIMA ATUALIZAÇÃO<br>05/09/2019</h5>
-			</header>
-			<section>
-				<div class="tabs tabs-style-linetriangle">
-					<nav>
-						<ul>
-							<li><a href="#section-linetriangle-1"><span>Plano PI Digital</span></a></li>
-							<li><a href="#section-linetriangle-2"><span>Carta de Serviços ao Usuário</span></a></li>
-						</ul>
-					</nav>
-					<div class="content-wrap">
-						<section id="section-linetriangle-1">
-							<div class='embed-container' data-page-width='452' data-page-height='640' id='ypembedcontainer' ><iframe   src="https://www.yumpu.com/pt/embed/view/QOpjw69PABvc3gf4" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe></div><script src='https://players.yumpu.com/modules/embed/yp_r_iframe.js' ></script>
-</section>
 						<section id="section-linetriangle-2">
 							<div class='embed-container' data-page-width='452' data-page-height='640' id='ypembedcontainer' ><iframe   src="https://www.yumpu.com/pt/embed/view/ScAECXDIW7Pfikse" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe></div><script src='https://players.yumpu.com/modules/embed/yp_r_iframe.js' ></script>
 </section>
-		</div>
-		</div>
-		<div class="footer">
-		<a href="http://www.inpi.gov.br/noticias/com-novo-plano-inpi-tera-servicos-100-digitais" target="_blank"><img src="http://www.inpi.gov.br/arquivos/logo_inpi_preto_fundo_transparente.png" alt="INPI" width="175"></a>
-	</div>
 	<script src="js/cbpFWTabs.js"></script>
 		<script>
 			(function() {
